--- a/index.html
+++ b/index.html
@@ -418,7 +418,7 @@
 
             <!-- Update Button -->
             <button type="button" class="update-btn" id="updateBtn" onclick="updatePlaceholder()">
-                Update placeholder
+                Create placeholder
             </button>
         </form>
 
